# pico-robot

./: .gitignore  ARCHITECTURE.md  Cargo.toml  GEMINI.md  README.md  memory.x
.cargo/: config.toml
docs/: motors.md  overview.md
examples/: blink_led.rs  display_demo.rs  encoders_demo.rs  encoders_hw_demo.rs  imu_demo.rs  leds_demo.rs  leds_off.rs  line_following_demo.rs  line_sensors_demo.rs  motors_demo.rs  target_velocity_demo.rs  uart_echo_demo.rs
src/: lib.rs  main.rs
src/hal/: closed_loop_motors.rs  display.rs  encoders.rs  encoders_old.rs  imu.rs  leds.rs  line_sensors.rs  mod.rs  motors.rs
