[package]
name = "picorobot"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
critical-section = "1.1.2"
defmt = "0.3.8"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
rp-pico = "0.9.0"
rp2040-hal = { version = "0.10.0", features = ["rtic-monotonic"] }
rtic = { version = "=2.1.1", features = ["thumbv6-backend"] }
rtic-monotonics = { version = "2.0.0", features = ["rp2040"] }
rp2040-boot2 = "0.3.0"
embedded-hal = "0.2.7"
sh1106 = "0.5.0"
embedded-graphics = "0.8.1"
pio = "0.2.1"
pio-proc = "0.2.2"
heapless = "0.8.0"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "s"
